[package]
name = "ps-util"
version = "0.1.0"
authors = ["elbaro <elbaro@github>"]
edition = "2018"

[[bin]]
name = "psutil"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
rand = "0.7"
num-traits = "0.2.8"
piston2d-graphics = "0.35.0"
piston_window = "0.105.0"
indoc = "0.3.4"
chrono = "0.4.9"
walkdir = "2.2.5"
colored = "1.8.0"
select = "0.4.3"
reqwest = "0.9.2"
libc = "0.2.62"
regex = "1.3.1"
wait-timeout = "0.2.0"
url = "2.1.0"
time = "0.1.42"
serde = "1.0.101"
cookie = "0.11.0"
fantoccini ="0.11.9"
tokio = { version ="0.2.0-alpha.5"}
serde_json = "1.0.40"
error-chain = "0.12.1"
failure = "0.1.5"
# selenium-rs = "0.1.1"

[build-dependencies]
clap = "2.33.0"
indoc = "0.3.4"
