[package]
name = "ps-util"
version = "0.1.0"
authors = ["elbaro <elbaro@github>"]
edition = "2018"

[[bin]]
name = "psutil"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
rand = "0.7.2"
num-traits = "0.2.8"
piston2d-graphics = "0.35.0"
piston_window = "0.105.0"
indoc = "0.3.4"
chrono = "0.4.9"
walkdir = "2.2.9"
colored = "1.8.0"
select = "0.4.3"
reqwest = "0.9.22"
libc = "0.2.65"
regex = "1.3.1"
wait-timeout = "0.2.0"
url = "2.1.0"
time = "0.1.42"
serde = "1.0.102"
cookie = "0.12.0"
fantoccini = "0.11.9"
tokio = "1.8.4"
serde_json = "1.0.41"
error-chain = "0.12.1"
failure = "0.1.6"
# selenium-rs = "0.1.1"

[build-dependencies]
clap = "2.33.0"
indoc = "0.3.4"
