[package]
name = "ps-util"
version = "0.1.0"
authors = ["elbaro <elbaro@github>"]
edition = "2021"

[[bin]]
name = "psutil"
path = "src/main.rs"

[dependencies]
clap = "3.2.16"
rand = "0.8.5"
num-traits = "0.2.15"
piston2d-graphics = "0.42.0"
piston_window = "0.124.0"
indoc = "1.0.7"
chrono = "0.4.21"
walkdir = "2.3.2"
colored = "2.0.0"
select = "0.5.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
libc = "0.2.129"
regex = "1.6.0"
wait-timeout = "0.2.0"
url = "2.2.2"
time = "0.3.13"
serde = "1.0.143"
cookie = "0.16.0"
fantoccini = "0.19.2"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
serde_json = "1.0.83"
error-chain = "0.12.4"
failure = "0.1.8"
